fixed sidebar gap

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ h5 {
   display: flex;
   flex-direction: column;
   color: white;
-  gap: 50px;
+  gap: 60px;
   box-shadow: 0px 10px 10px 0 rgba(0, 0, 0, 0.8);
   z-index: 2;
   padding-top: var(--top_padding);
@@ -52,6 +52,7 @@ h5 {
   display: grid;
   grid-template-columns: repeat(2, min-content);
   align-items: center;
+  row-gap: 10px;
 }
 .header > h1 {
   font-weight: bold;
@@ -70,7 +71,7 @@ h5 {
 .heading {
   padding-top: var(--top_padding);
   display: grid;
-  grid-template-rows: repeat(2, 1fr) min;
+  grid-template-rows: repeat(2, 1fr);
   grid-template-columns: 3fr 1fr;
   padding: 0 80px 0;
   row-gap: 20px;
